-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8u172
-
Component/s: hotspot
-
b01
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8208917 | 8u201 | Kevin Walls | P4 | Resolved | Fixed | b01 |
| JDK-8216737 | emb-8u201 | Kevin Walls | P4 | Resolved | Fixed | master |
Experimentally compiling jdk8u on Windows with VS2017, some of the problems are:
C:\workbuild\jdk8u-dev\hotspot\src\share\vm\memory/threadLocalAllocBuffer.inline.hpp(98): error C3680: cannot concatenate user-defined string literals with mismatched literal suffix identifiers
C:\workbuild\jdk8u-dev\hotspot\src\share\vm\memory/threadLocalAllocBuffer.inline.hpp(98): note: Concatenating suffix 'INTPTR_FORMAT' with suffix 'SIZE_FORMAT'
These errors are gone with whitespace changes in jdk 9 that come in with:
8145092: Use Unified Logging for the GC logging
C:\workbuild\jdk8u-dev\hotspot\src\share\vm\memory/threadLocalAllocBuffer.inline.hpp(98): error C3680: cannot concatenate user-defined string literals with mismatched literal suffix identifiers
C:\workbuild\jdk8u-dev\hotspot\src\share\vm\memory/threadLocalAllocBuffer.inline.hpp(98): note: Concatenating suffix 'INTPTR_FORMAT' with suffix 'SIZE_FORMAT'
These errors are gone with whitespace changes in jdk 9 that come in with:
8145092: Use Unified Logging for the GC logging
- backported by
-
JDK-8208917 [8u] VS2017: more instances of "error C3680: cannot concatenate user-defined string literals with mismatched literal suffix identifiers"
-
- Resolved
-
-
JDK-8216737 [8u] VS2017: more instances of "error C3680: cannot concatenate user-defined string literals with mismatched literal suffix identifiers"
-
- Resolved
-